Examen Primer Bimestre

--- a/Examen/examenBI.ipynb
+++ b/Examen/examenBI.ipynb
@@ -14,7 +14,8 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np"
    ]
   },
   {
@@ -877,156 +878,79 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e78e4923-dfee-4234-bde2-20828e1d6e8a",
+   "id": "9dea3889-82d1-48d4-a4e5-f77073b7e2f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Consulta preprocesada: space travel\n",
-      "Vocabulario común entre la consulta y el corpus: {'travel', 'space'}\n",
-      "\n",
-      "Similitud para la consulta 'space travel':\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "Links de las críticas relevantes (primeros 10):\n",
-      "['m/first_man' 'm/ad_astra' 'm/apollo_11_2019'\n",
+      "Índices relevantes: [ 346898  110181  141461  464911  349736  844909  844891  110398  110262\n",
+      " 1042501]\n",
+      "Links de las críticas relevantes (primeros 10): ['m/first_man' 'm/ad_astra' 'm/apollo_11_2019'\n",
       " 'm/it_the_terror_from_beyond_space' 'm/flight_of_the_navigator'\n",
       " 'm/source_code' 'm/source_code' 'm/ad_astra' 'm/ad_astra'\n",
       " 'm/time_travelers_wife']\n",
-      "\n",
-      "Resultados para la consulta: 'space travel'\n",
-      "Relevancia: 0.6702 - Película: Deep Blue - Link: m/10003437-deep_blue\n",
-      "Relevancia: 0.5436 - Película: Eternal - Link: m/10004697-eternal\n",
-      "Relevancia: 0.5232 - Película: Aliens - Link: m/1000617-aliens\n",
-      "Relevancia: 0.5127 - Película: The Happening - Link: m/10007985-happening\n",
-      "Relevancia: 0.4861 - Película: Disney's A Christmas Carol - Link: m/10008502-christmas_carol\n",
-      "Relevancia: 0.4752 - Película: Fireflies in the Garden - Link: m/10008601-fireflies_in_the_garden\n",
-      "Relevancia: 0.4752 - Película: Darfur Now - Link: m/10008700-darfur_now\n",
-      "Relevancia: 0.4743 - Película: The Visitor - Link: m/10008820-visitor\n",
-      "Relevancia: 0.4698 - Película: Land of the Lost - Link: m/10009083-land_of_the_lost\n",
-      "Relevancia: 0.4568 - Película: The Duchess of Langeais (Ne Touchez Pas La Hache)(Don't Touch the Axe) - Link: m/10009210-duchess_of_langeais\n"
+      "Consulta preprocesada: space travel\n",
+      "Vocabulario común entre la consulta y el corpus: {'travel', 'space'}\n",
+      "Similitud para la consulta 'space travel':\n",
+      "[0.67022824 0.5436185  0.5231926  0.51269205 0.48614755 0.47516708\n",
+      " 0.47516708 0.47434943 0.4697501  0.4567627 ]\n",
+      "Relevancia: 0.6702 - Película: First Man - Link: m/first_man\n",
+      "Relevancia: 0.5436 - Película: Ad Astra - Link: m/ad_astra\n",
+      "Relevancia: 0.5232 - Película: Apollo 11 - Link: m/apollo_11_2019\n",
+      "Relevancia: 0.5127 - Película: It! The Terror From Beyond Space - Link: m/it_the_terror_from_beyond_space\n",
+      "Relevancia: 0.4861 - Película: Flight of the Navigator - Link: m/flight_of_the_navigator\n",
+      "Relevancia: 0.4752 - Película: Source Code - Link: m/source_code\n",
+      "Relevancia: 0.4752 - Película: Source Code - Link: m/source_code\n",
+      "Relevancia: 0.4743 - Película: Ad Astra - Link: m/ad_astra\n",
+      "Relevancia: 0.4698 - Película: Ad Astra - Link: m/ad_astra\n",
+      "Relevancia: 0.4568 - Película: The Time Traveler's Wife - Link: m/time_travelers_wife\n"
      ]
     }
    ],
    "source": [
-    "# Función para realizar consultas y obtener las películas más relevantes\n",
+    "# Consultar el TF-IDF de la consulta\n",
     "def query_search(query, vectorizer, X, reviews_df, movies_df):\n",
     "    # Preprocesar la consulta\n",
     "    query_cleaned = preprocess_query(query)\n",
     "    \n",
-    "    # Depuración: Mostrar la consulta preprocesada\n",
-    "    print(f\"\\nConsulta preprocesada: {query_cleaned}\")\n",
-    "    \n",
-    "    # Verificar que las palabras de la consulta estén en el vocabulario de TF-IDF\n",
-    "    query_vocab = set(query_cleaned.split())\n",
-    "    vectorizer_vocab = set(vectorizer.get_feature_names_out())\n",
-    "    common_vocab = query_vocab.intersection(vectorizer_vocab)\n",
-    "    print(f\"Vocabulario común entre la consulta y el corpus: {common_vocab}\")\n",
-    "    \n",
-    "    # Transformar la consulta preprocesada en un vector TF-IDF\n",
+    "    # Transformar la consulta en el formato de TF-IDF\n",
     "    query_vector = vectorizer.transform([query_cleaned])\n",
     "    \n",
     "    # Calcular la similitud coseno entre la consulta y las críticas\n",
-    "    similarity_scores = cosine_similarity(query_vector, X).flatten()\n",
+    "    similarity_scores = np.dot(X, query_vector.T).toarray().flatten()\n",
     "    \n",
-    "    # Depuración: Verificar que la similitud se calcula correctamente\n",
-    "    print(f\"\\nSimilitud para la consulta '{query_cleaned}':\")\n",
-    "    print(similarity_scores[:10])  # Mostrar las primeras 10 similitudes para depuración\n",
-    "\n",
-    "    # Obtener los índices de las críticas ordenados por relevancia\n",
-    "    ranked_indices = similarity_scores.argsort()[::-1]  # Índices de las críticas más relevantes\n",
-    "\n",
-    "    # Filtrar las críticas que tengan similitudes significativas (mayores a un umbral)\n",
-    "    threshold = 0.1  # Umbral mínimo de similitud\n",
-    "    relevant_indices = [idx for idx in ranked_indices if similarity_scores[idx] > threshold]\n",
+    "    # Obtener los índices de las críticas relevantes\n",
+    "    relevant_indices = np.argsort(similarity_scores)[::-1][:10]\n",
     "    \n",
-    "    # Obtener los 'rotten_tomatoes_link' de las críticas relevantes\n",
-    "    relevant_movie_links = reviews_df.iloc[relevant_indices]['rotten_tomatoes_link'].values\n",
-    "\n",
-    "    # Depuración: Verificar que los links de las críticas coinciden con las películas\n",
-    "    print(\"\\nLinks de las críticas relevantes (primeros 10):\")\n",
-    "    print(relevant_movie_links[:10])  # Mostrar los primeros 10 links\n",
-    "\n",
-    "    # Realizar un merge entre los 'rotten_tomatoes_link' de las críticas relevantes y el dataframe de películas\n",
-    "    relevant_movies = movies_df[movies_df['rotten_tomatoes_link'].isin(relevant_movie_links)]\n",
+    "    # Obtener los enlaces de las críticas relevantes\n",
+    "    relevant_critic_links = reviews_df.iloc[relevant_indices]['rotten_tomatoes_link'].values\n",
     "    \n",
-    "    # Mostrar las películas más relevantes\n",
-    "    top_n = 10  # Número de resultados a mostrar\n",
-    "    print(f\"\\nResultados para la consulta: '{query}'\")\n",
+    "    # Asegurarnos de que los índices no estén fuera de rango\n",
+    "    print(f\"Índices relevantes: {relevant_indices}\")\n",
+    "    print(f\"Links de las críticas relevantes (primeros 10): {relevant_critic_links}\")\n",
     "    \n",
-    "    # Corregir el índice para mostrar correctamente las películas relevantes\n",
-    "    for idx in range(min(top_n, len(relevant_movies))):\n",
-    "        movie_title = relevant_movies.iloc[idx]['movie_title']\n",
-    "        movie_link = relevant_movies.iloc[idx]['rotten_tomatoes_link']\n",
-    "        relevancy_score = similarity_scores[relevant_indices[idx]]  # Usar el índice de similitud correcto\n",
-    "        print(f\"Relevancia: {relevancy_score:.4f} - Película: {movie_title} - Link: {movie_link}\")\n",
+    "    # Mostrar las películas y enlaces de las críticas relevantes\n",
+    "    print(f\"Consulta preprocesada: {query_cleaned}\")\n",
+    "    print(f\"Vocabulario común entre la consulta y el corpus: {set(query_cleaned.split())}\")\n",
+    "    print(f\"Similitud para la consulta '{query}':\\n{similarity_scores[relevant_indices]}\")\n",
+    "    \n",
+    "    # Ahora, busca las películas correspondientes a esos enlaces\n",
+    "    for idx in range(len(relevant_critic_links)):\n",
+    "        movie_link = relevant_critic_links[idx]\n",
+    "        movie_row = movies_df[movies_df['rotten_tomatoes_link'] == movie_link].iloc[0]\n",
+    "        print(f\"Relevancia: {similarity_scores[relevant_indices[idx]]:.4f} - Película: {movie_row['movie_title']} - Link: {movie_row['rotten_tomatoes_link']}\")\n",
     "\n",
-    "# Realizar una consulta de ejemplo\n",
-    "query = \"space travel\"  # Ejemplo de consulta sobre viajes espaciales\n",
-    "query_search(query, vectorizer, X, reviews_df, movies_df)  # Realizar la búsqueda y mostrar los resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "076aa90c-329e-48b4-8b2b-e6646fdfb209",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1130017\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(reviews_df.shape[0])  # Verifica cuántas filas tiene el DataFrame\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8699de28-ba5d-4cd4-bd4e-efe172321572",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(reviews_df['review_content'].isna().sum())  # Verifica cuántos valores NaN hay\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "25e567f7-8e8c-4ed0-bbb1-f37b20215e35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1130017, 10)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(reviews_df.shape)  # Debería ser (1048575, n)\n"
+    "# Llamar a la función con la consulta\n",
+    "query = \"space travel\"\n",
+    "query_search(query, vectorizer, X, reviews_df, movies_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8b0bf57-2f1a-413c-a554-5256c42e4b10",
+   "id": "39766e19-95f8-49db-b791-d6c4d91980bc",
    "metadata": {},
    "outputs": [],
    "source": []
